--- a/async-requests/poll/task.css
+++ b/async-requests/poll/task.css
@@ -9,3 +9,51 @@ body {
 .poll__title {
   margin-bottom: 20px;
 }
+
+.modal {
+  position: absolute;
+  left: -100%;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(0, 0, 0, 0.7);
+  transition: 0.5s;
+}
+
+.modal__alert {
+  font-size: 20px;
+  background-color: aliceblue;
+  width: 30%;
+  text-align: center;
+  padding: 20px 0px;
+  border-radius: 10px;
+}
+
+.modal__text {
+  position: relative;
+}
+
+.modal__text::after {
+  content: "";
+  width: 100%;
+  height: 3px;
+  background-color: rgb(112, 141, 6);
+  position: absolute;
+  left: 0px;
+  top: 30px;
+}
+
+.modal__close {
+  margin: 20px 0px 0px 0px;
+  text-align: right;
+  cursor: pointer;
+  font-weight: bold;
+  color: rgb(91, 88, 248);
+  padding: 0px 20px;
+}
+
+.modal-active {
+  left: 0px;
+}
